fix(applications/web): project update width of content too narrow (BOAS-1587)

--- a/apps/web/src/styles/7-components/project-update.scss
+++ b/apps/web/src/styles/7-components/project-update.scss
@@ -4,3 +4,12 @@
         margin-block-start: 0;
     }
 }
+
+dd.project-update {
+	@media (min-width: 40.0625em) {
+		p {
+			// span over action column
+			width: 150%
+		}
+	}
+}
